clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/serviceentry/helloworld-zufardhiyaulhaq-dev-se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: helloworld-zufardhiyaulhaq-dev-se
  namespace: istio-system
spec:
  hosts:
  - helloworld.zufardhiyaulhaq.dev
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 8080
    name: http-https
    protocol: HTTP
  - number: 8008
    name: http-mtls
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  - number: 8443
    name: https-mtls
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
