clusters/kubernetes-cluster-02/manifests/namespaces/istio-system/serviceentry/server-mtls-zufardhiyaulhaq-dev-se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: server-mtls-zufardhiyaulhaq-dev-se
  namespace: istio-system
spec:
  hosts:
  - server.mtls.zufardhiyaulhaq.dev
  ports:
  - number: 443
    name: https-port
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
